sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/testsuite.duarouter
# Vehicle's depart is empty
vehicle_depart_empty

# Vehicle's depart is not numeric
vehicle_depart_false

# Vehicle's depart is not given
vehicle_depart_missing


# Vehicle's id is empty
vehicle_id_empty

# Vehicle's id is not given
vehicle_id_missing


# Vehicle's route id is empty
vehicle_route_empty

# Vehicle's route id is not given
vehicle_route_missing

# Vehicle's route is not known
vehicle_route_unknown







